Fix iframes overflow

--- a/assets/css/template-style.css
+++ b/assets/css/template-style.css
@@ -10,6 +10,24 @@ body.game02 {
 body.game03 {
 	background: url("../media/images/BackgroundGame03.jpg") no-repeat fixed center center / 100% auto rgba(56, 18, 82, 0);
 }
+
+/*
+.resp-container {
+	background: none;
+	position: relative;
+	padding-bottom: 32%; // 16:9 56.25%
+	height: 0;
+}
+
+.resp-container iframe {
+	background: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+*/
 nav {
 	background: none repeat scroll 0 0 rgba(56, 18, 82, 0);
 	position: absolute;
